[gd_scene load_steps=4 format=3 uid="uid://b8pcc6x4abdnb"]

[ext_resource type="Script" uid="uid://3n7onuscv5vu" path="res://technical/items/Greasepuppy.gd" id="1_g6geb"]
[ext_resource type="Texture2D" uid="uid://d1krw3p03h87g" path="res://assets/images/items/gp0.png" id="2_sp0fm"]
[ext_resource type="AudioStream" uid="uid://blfksn5wuyk14" path="res://assets/sounds/chaching.ogg" id="3_hnw2g"]

[node name="Greasepuppy" type="Node2D"]
script = ExtResource("1_g6geb")

[node name="puppy" type="Sprite2D" parent="."]
texture = ExtResource("2_sp0fm")

[node name="AudioListener2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_hnw2g")
volume_db = -10.895
max_distance = 800.0
attenuation = 1.31951
bus = &"SFX"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.6
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
